# plugin-voice

./: .gitignore  README.md  pyproject.toml
plans/001-mvp/: PLAN.md  RESEARCH.md  execution-summary.md
plans/002-multi-voice/: PLAN.md  execution-summary.md
plans/003-agent-connect/: PLAN.md  execution-summary.md
plans/004-live-identity-and-persona-tab/: PLAN.md  execution-summary.md
plugin_voice/: __init__.py  bridge.py  dsp.py  dsp_calibration.py  dsp_pure.py  elevenlabs.py  identity.py  luna-plugin.toml  persona_config.py  personality.py  routes.py  setup.py  state.py
plugin_voice/ui/settings/: index.html
plugin_voice/ui/settings/persona/: index.html
plugin_voice/ui/widgets/voice/: elevenlabs-client.js  index.html
tests/: conftest.py  test_bridge.py  test_dsp_pure.py  test_hosted_bridge.py  test_live_elevenlabs.py  test_manifest.py  test_persona_settings.py  test_routes_dojo.py  test_voice_features.py
tests/dojo/: report.md  run_dojo.py
